--- a/Linked_List/makefile
+++ b/Linked_List/makefile
@@ -1,8 +1,8 @@
-main: LinkedList.o
+main: linkedlist.o main.o
 	gcc linkedlist.o main.o -o main
 
 linkedlist.o: Linked_List.c Linked_List.h
-	gcc Linked_List.c -o linkedlist.o
+	gcc -c Linked_List.c -o linkedlist.o
 
 main.o: main.c
-	gcc main.c -o main.o
+	gcc -c main.c -o main.o
