Completed the functions for linked list

--- a/Linked_List/makefile
+++ b/Linked_List/makefile
@@ -2,7 +2,10 @@ main: linkedlist.o main.o
 	gcc linkedlist.o main.o -o main
 
 linkedlist.o: Linked_List.c Linked_List.h
-	gcc -c Linked_List.c -o linkedlist.o
+	gcc -c -g Linked_List.c -o linkedlist.o
 
 main.o: main.c
-	gcc -c main.c -o main.o
+	gcc -c -g main.c -o main.o
+
+clear:
+	rm *.o main
